feat(./add-list): make add-list disappear on click

--- a/movie-lists/src/app/add-list/add-list.component.html
+++ b/movie-lists/src/app/add-list/add-list.component.html
@@ -1,3 +1,3 @@
-<button (click) = "onSelect()" >
+<button *ngIf = "!this.create" (click) = "onCreate()" >
   Add a new Movies to watch list
 </button>
