--- a/movie-lists/src/app/app.component.html
+++ b/movie-lists/src/app/app.component.html
@@ -4,6 +4,15 @@
     {{ title }}
   </h1>
 </div>
-<app-add-list></app-add-list>
+
+<nav>
+    <a routerLink = '/viewList'>
+      View My Lists
+    </a>
+  <a routerLink = '/createList'>
+    Add New Lists
+  </a>
+</nav>
+<router-outlet></router-outlet>
 
 
